# vrx-vln

./: .gitattributes  .gitignore  LICENSE  README.md  README_VRX_VLN.md  build_vrx_vln.sh  launch_marine_vln.sh  launch_marine_vln_classic.sh  launch_vrx_vln.sh
docs/: COMMAND_QUICKSTART.md
src/formation_planner/: package.xml  setup.cfg  setup.py
src/formation_planner/formation_planner/: triangle_formation_controller.py
src/marine_vln_vrx/: README.md  package.xml  setup.cfg  setup.py
src/marine_vln_vrx/config/: marine_vln_params.yaml
src/marine_vln_vrx/config/prompts/: vlm_system_prompt.txt  vlm_user_prompt.txt
src/marine_vln_vrx/data/: scene_objects.yaml  scene_objects_classic_longrange.yaml  scene_objects_dynamic_challenge.yaml  vlm_sft_seed.jsonl
src/marine_vln_vrx/docs/: demo_minimal.md  extension_roadmap.md  system_design.md  topic_interface.md  vlm_finetune.md
src/marine_vln_vrx/launch/: marine_vln_system.launch.py
src/marine_vln_vrx/marine_vln_vrx/: __init__.py
src/marine_vln_vrx/marine_vln_vrx/common/: __init__.py  geometry_utils.py  json_utils.py  log_utils.py
src/marine_vln_vrx/marine_vln_vrx/controller/: README.md  __init__.py  node.py
src/marine_vln_vrx/marine_vln_vrx/dynamic_obstacle_driver/: __init__.py  node.py
src/marine_vln_vrx/marine_vln_vrx/instruction_manager/: README.md  __init__.py  grounding.py  node.py  semantic_schema.py  vlm_client.py
src/marine_vln_vrx/marine_vln_vrx/local_planner/: README.md  __init__.py  node.py
src/marine_vln_vrx/marine_vln_vrx/safety_monitor/: README.md  __init__.py  node.py
src/marine_vln_vrx/marine_vln_vrx/scene_parser/: README.md  __init__.py  node.py
src/marine_vln_vrx/marine_vln_vrx/scripts/: __init__.py  export_vlm_sft_data.py  publish_instruction.py  test_vlm_parser.py
src/marine_vln_vrx/marine_vln_vrx/semantic_mapper/: README.md  __init__.py  node.py
src/marine_vln_vrx/marine_vln_vrx/subgoal_planner/: README.md  __init__.py  node.py
src/marine_vln_vrx/resource/: marine_vln_vrx
src/marine_vln_vrx/scripts/: template_instructions.py
src/vrx_vln_bringup/: package.xml  setup.cfg  setup.py
src/vrx_vln_bringup/config/: vrx_vln_camera_debug.rviz  vrx_vln_sensors.rviz  wamv_four_color.yaml  wamv_single.yaml
src/vrx_vln_bringup/launch/: blank_water_four_usv.launch.py  empty_usv.launch.py
src/vrx_vln_bringup/vrx_vln_bringup/: sensor_marker_publisher.py
src/vrx_vln_bringup/worlds/: vrx_vln_blank_water.sdf  vrx_vln_buoy_test.sdf  vrx_vln_classic_longrange.sdf  vrx_vln_dynamic_challenge.sdf  vrx_vln_empty.sdf
(+17 files in other folders)
