<?xml version="1.0"?>
<package format="3">
  <name>formation_planner</name>
  <version>0.0.1</version>
  <description>Triangle formation straight-line path following demo for VRX</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robot_info_msg</exec_depend>

</package>