<?xml version="1.0"?>
<package format="3">
  <name>marine_vln_vrx</name>
  <version>0.1.0</version>
  <description>Minimal hierarchical Marine-VLN prototype for VRX (ROS 2).</description>
  <maintainer email="luzq25@mails.tsinghua.edu.cn">THUlzq</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>vrx_vln_bringup</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
